# scratch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  scratch.sln
.github/workflows/: cmake-multi-platform.yml
cmake/: dependencies.cmake
scratch/: CMakeLists.txt  Makefile  scratch.vcxproj  scratch.vcxproj.filters
scratch_box2d/: Makefile  scratch_box2d.vcxproj  scratch_box2d.vcxproj.filters
scratch_imgui/: Makefile  scratch_imgui.vcxproj  scratch_imgui.vcxproj.filters
